# GIS

./: .env  .gitignore  README.md  UPUTSTVO.md  mapa_ml_rezultati.html  mapa_novi_sad.html  pyproject.toml
app/: app.py
deo1_sql/: baza.py  crud.py  upiti.py
deo2_geo/: geo_analiza.py  mapa_spatial_operacije.py  spatial_operacije.py
deo3_ml/: ml_detekcija.py
