[project]
name = "gis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "joblib>=1.5.3",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "rasterio>=1.5.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "shapely>=2.1.2",
    "streamlit>=1.58.0",
    "streamlit-folium>=0.27.2",
]
